# mpm-2d

./: AA.m  CMakeLists.txt  Doxyfile.in  bagnold_test.sh  ball.txt  ball2.txt  ball3.txt  ball_large.txt  bc.c  bc.cfg  bc_oest.c  beverloo_genp.m  beverloo_test.sh  cd_scene.txt  column_40d.txt  column_40d_horizontal.txt  com_finder_simple.py  compile_material.sh  dp_rd.c  dp_ri.c  dp_ri_mt.c  element.c  element.h  exitcodes.h  extract_matplotlib_cmaps.py  frame_plotter.py  frame_plotter_scatter.py  frame_plotter_svopt.py  frame_to_csv.py  framereader.py  g_local.c  g_local_mu2.c  g_local_mu2_ext.c  g_local_mu2_reverse.c  g_nonlocal.c  g_nonlocal_bicgstab.c  g_nonlocal_mu2.c  gen_figures.sh  gen_particles.m  gen_particles_oest.m  (+74 more)
bcsrc/: CMakeLists.txt  box.c  makefile  square_hourglass.c  square_silo.c  temp.c
cmake/: CodeCoverage.cmake  FindCXSparse.cmake  FindDL.cmake  FindFTGL.cmake  FindFreetype.cmake  FindSDL.cmake  Findconfuse.cmake
cmaps/: Accent.cm  Blues.cm  BrBG.cm  BuGn.cm  BuPu.cm  BuRd.cm  Dark2.cm  GnBu.cm  Greens.cm  Greys.cm  OrRd.cm  Oranges.cm  PRGn.cm  Paired.cm  Pastel1.cm  Pastel2.cm  PiYG.cm  PuBu.cm  PuBuGn.cm  PuOr.cm  PuRd.cm  Purples.cm  PurplesReduced.cm  RdBu.cm  RdGy.cm  RdPu.cm  RdYlBu.cm  RdYlGn.cm  Reds.cm  Set1.cm  Set2.cm  Set3.cm  SiloDefault.cm  Spectral.cm  Spectral.cm (Case Conflict 4)  Spectral2.cm  YlGn.cm  YlGnBu.cm  YlOrBr.cm  YlOrBrReduced.cm  (+34 more)
examples/drop/: PuOr.cm  PuOrReduced.cm  Untitled.xcf  circle.cfg  circle.particles  cmapc.py  config  generic.xcf  heap_scene.txt  make_colorbars.py  mpl.rc  png_to_particles.py  s0.cfg  s0.particles  s0.png.resize  s05.cfg  s05.particles  s05.png.resize  s05_tip.csv  s0_tip.csv  s1.cfg  s1.particles  s1.png.resize  s1_tip.csv  s2-small.cfg  s2-small.particles  s2.cfg  s2.particles  s2.png.resize  s2_tip.csv  tri.particles  triangle.particles  triangle.particles.novel
examples/heap/: heap_scene.txt  simulation.cfg  sym_heap_scene.txt
examples/silo/: framereader.py  generate_silo_particles.py  rycroft.cfg  rycroft.grid  rycroft.particles  silo.particles  simulation.cfg
gpl/: AUTHORS  INSTALLING  NEW
libmpm/: CMakeLists.txt  element.h  implicit.h  interpolate.c  interpolate.h  loading.c  map.c  map.h  material.c  material.h  node.h  particle.c  particle.h  process.c  process.h  process_common.c  process_usl.c  process_usl.h  spmd.c  spmd.h  spmd_test.c  tensor.c
materialsrc/: CMakeLists.txt  cs_cg.c  cs_cg.h  dp_ri_mt.c  g_local.c  g_local_mu2.c  g_local_mu2_plane_strain.c  g_nonlocal.c  g_nonlocal_mu2.c  g_nonlocalxs71.c  isolin.c  makefile  test_material.c
matlab/: gen_particles.m
mpm2d/: CMakeLists.txt  CMakeSourceFiles.txt  bc.c  element.h  interpolate.c  loading.c  main.c  material.c  particle.h  process.c  process.h  reader.c  reader.h  writer.c  writer.h
src/: CMakeLists.txt  GitSHA1.h  bc.c  bc_old.c  element.c  element.h  implicit.c  interpolate.c  interpolate.h  loading.c  main.c  makefile  map.c  node.h  osx_barrier.c  particle.c  particle.h  process.c  process.h  reader.c  reader.h  rtsafe.c  tensor.c  tensor.h  tga_writer.h  writer.c  writer.h
tests/: CMakeLists.txt  ShapeFunctionsTest.cpp  catchmain.cpp  cgsolver.c  dp_rd.cfg  dp_ri.cfg  dp_ri_mt.cfg  g_local.cfg  g_local_mu2.cfg  g_local_mu2_ext.cfg  g_local_mu2_plane_strain.cfg  g_local_mu2_reverse.cfg  g_local_mu2_true_2d.cfg  g_nonlocal.cfg  g_nonlocal_avg.cfg  g_nonlocal_bicgstab.cfg  g_nonlocal_mu2.cfg  g_nonlocalxs71.cfg  isolin.cfg  particle_movement.c  test_material.c
viz/: CMakeLists.txt  CMakeSourceFiles.txt  viz.cpp
vizsrc/: CMakeLists.txt  backgroundmesh.hpp  infoparser.hpp  makefile  node.hpp  tokenizer.cpp  tokenizer.hpp  viz.cpp  viz_colormap.hpp  viz_element.hpp  viz_particle.hpp  viz_reader.cpp  viz_reader.hpp
